tests/errors/first_stage/.define/name_taken/name_taken.am
.define a = 2
.define a = 4
